# Optical-Alignment-RT-Demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: GUI_Demo.mov
include/: FreeRTOSConfig.h  controller.h  visualizer_runtime.h
src/: controller.c  freertos_app.c  main.c  visualizer_runtime.c
visualizer/: gui.py
